--- a/demo/index.htm
+++ b/demo/index.htm
@@ -1,13 +1,11 @@
 <head>
-	<title>MyLibrary Demo</title>
+	<title>Fetch Robot Demo</title>
 </head>
 
 <body>
-  <script src="../dist/mylibrary.js"></script>
+  <script src="../dist/fetch-robot.js"></script>
 
 	<script>
-		mylibrary.createButton(document.body, 'Click Me', function(event) {
-			window.alert('Button was clicked!');
-		});
+	
 	</script>
 </body>
